--- a/scss/components/_contacto.scss
+++ b/scss/components/_contacto.scss
@@ -1,4 +1,3 @@
-/* Estilos específicos para la página de contacto/form */
 .create-hero {
     background-color: rgb(221, 201, 174);
     padding: 50px 0;
@@ -55,7 +54,7 @@
             font-size: 16px;
 
             &:hover {
-                background-color: #00a6cf;
+                background-color: #00b2d1;
                 transition-duration: 1s;
             }
         }
