--- a/scss/components/_galeria.scss
+++ b/scss/components/_galeria.scss
@@ -1,4 +1,3 @@
-/* Estilos específicos para la galería */
 @mixin gallery-item($bg-color, $text-color, $text-align) {
     position: absolute;
     bottom: 0;
@@ -21,26 +20,26 @@
         "grid-item6 grid-item7 grid-item5"
         "grid-item8 grid-item8 grid-item9";
     width: 100%; /* Asegura que la galería ocupe todo el ancho del contenedor */
-}
 
-.galeria img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: relative;
-}
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        position: relative;
+    }
 
-.galeria h3 {
-    @include gallery-item(rgba(17, 17, 17, 0.55), white, center);
-}
+    h3 {
+        @include gallery-item(rgba(17, 17, 17, 0.55), white, center);
+    }
 
-/* Definiciones para las áreas de la cuadrícula */
-.grid-item1 { grid-area: grid-item1; }
-.grid-item2 { grid-area: grid-item2; }
-.grid-item3 { grid-area: grid-item3; }
-.grid-item4 { grid-area: grid-item4; }
-.grid-item5 { grid-area: grid-item5; }
-.grid-item6 { grid-area: grid-item6; }
-.grid-item7 { grid-area: grid-item7; }
-.grid-item8 { grid-area: grid-item8; }
-.grid-item9 { grid-area: grid-item9; }
+    /* Definiciones para las áreas de la cuadrícula */
+    .grid-item1 { grid-area: grid-item1; }
+    .grid-item2 { grid-area: grid-item2; }
+    .grid-item3 { grid-area: grid-item3; }
+    .grid-item4 { grid-area: grid-item4; }
+    .grid-item5 { grid-area: grid-item5; }
+    .grid-item6 { grid-area: grid-item6; }
+    .grid-item7 { grid-area: grid-item7; }
+    .grid-item8 { grid-area: grid-item8; }
+    .grid-item9 { grid-area: grid-item9; }
+}
