--- a/css/estilos.css
+++ b/css/estilos.css
@@ -139,23 +139,6 @@ nav {
         nav .menu li a:hover {
           background-color: #490000;
           color: #fff; }
-  @media (min-width: 769px) {
-    nav .hamburger {
-      display: none; }
-    nav .menu {
-      display: flex;
-      position: static;
-      max-height: none;
-      flex-direction: row;
-      background-color: transparent;
-      width: auto;
-      margin: 0;
-      padding: 0; }
-      nav .menu li {
-        margin: 0 15px; }
-        nav .menu li a {
-          padding: 10px;
-          text-align: center; } }
 
 /* Estilos específicos para la página de inicio */
 main {
@@ -511,6 +494,25 @@ main {
     display: block; }
   nav .menu-toggle:checked + .hamburger + .menu {
     max-height: 500px; } }
+
+@media (min-width: 769px) {
+  nav .hamburger {
+    display: none; }
+  nav .menu {
+    display: flex;
+    position: static;
+    max-height: none;
+    justify-content: center;
+    flex-direction: row;
+    background-color: transparent;
+    width: auto;
+    margin: 0;
+    padding: 0; }
+    nav .menu li {
+      margin: 0 15px; }
+      nav .menu li a {
+        padding: 10px;
+        text-align: center; } }
 
 /* Media Queries Slider*/
 @media (max-width: 1280px) {
