--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,6 +5,8 @@
   padding: 0;
   box-sizing: border-box;
   font-family: fuentemedieval; }
+  * h2 {
+    padding: 6px; }
 
 @font-face {
   font-family: fuentemedieval;
@@ -107,7 +109,7 @@ nav {
     nav .hamburger .hamburger-line {
       width: 30px;
       height: 3px;
-      background-color: #fff;
+      background-color: antiquewhite;
       margin: 5px;
       transition: 0.3s; }
   nav .menu {
@@ -130,12 +132,12 @@ nav {
       margin: 10px 0; }
       nav .menu li a {
         text-decoration: none;
-        color: #fff;
+        color: antiquewhite;
         font-size: 16px;
         font-family: fuentecelta;
         padding: 15px;
         border-radius: 5px;
-        transition: background-color 0.3s, color 0.3s; }
+        transition: background-color 0.7s, color 0.7s; }
         nav .menu li a:hover {
           background-color: #490000;
           color: #fff; }
@@ -159,7 +161,6 @@ main {
     /* Aumenta el tamaño de la fuente */
     font-weight: bold;
     /* Añade negrita */
-    text-shadow: 2px 2px #ccc;
     background-color: #947962;
     border: groove 1px #000; }
   main p {
@@ -198,7 +199,8 @@ main {
     width: 100%;
     align-items: center; }
   .slider-frame img {
-    width: 100%; }
+    width: 100%;
+    height: 600px; }
 
 @keyframes slide {
   0%, 20% {
@@ -289,8 +291,7 @@ main {
   font-size: 1.6rem;
   /* Aumenta el tamaño de la fuente */
   font-weight: bold;
-  /* Añade negrita */
-  text-shadow: 2px 2px #ccc; }
+  /* Añade negrita */ }
 
 .highlighted-title {
   font-family: fuentemedieval;
@@ -465,6 +466,11 @@ main {
   nav ul li {
     margin: 5px 0; } }
 
+@media (min-width: 481px) {
+  .logo img {
+    height: 80px;
+    width: 80px; } }
+
 @media (max-width: 480px) {
   .logo img {
     height: 80px;
@@ -531,19 +537,28 @@ main {
   .slider-frame {
     width: 100%; }
   .slider-frame ul {
-    width: 400%; } }
+    width: 400%; }
+  img {
+    width: 100%;
+    height: 100% !important; } }
 
 @media (max-width: 480px) {
   .slider-frame {
     width: 100%; }
   .slider-frame ul {
-    width: 400%; } }
+    width: 400%; }
+  img {
+    width: 100%;
+    height: 100% !important; } }
 
 @media (max-width: 350px) {
   .slider-frame {
     width: 100%; }
   .slider-frame ul {
-    width: 400%; } }
+    width: 400%; }
+  img {
+    width: 100%;
+    height: 100% !important; } }
 
 /* Media Queries para la sección de Razas y Clases */
 @media (max-width: 768px) {
@@ -563,6 +578,21 @@ main {
   .card-content p {
     font-size: 1rem;
     /* Ajuste para pantallas más pequeñas */ } }
+
+@media (max-width: 1024px) and (min-width: 769px) {
+  .galeria {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto;
+    grid-template-areas: "grid-item1 grid-item1" "grid-item2 grid-item2" "grid-item3 grid-item4" "grid-item5 grid-item5" "grid-item6 grid-item7" "grid-item8 grid-item8" "grid-item9 grid-item9"; }
+  img {
+    object-fit: contain;
+    height: auto; } }
+
+@media (max-width: 768px) {
+  .galeria {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(9, auto);
+    grid-template-areas: "grid-item1" "grid-item2" "grid-item3" "grid-item4" "grid-item5" "grid-item6" "grid-item7" "grid-item8" "grid-item9"; } }
 
 /* Estilo Footer para pantallas de tamaño de monitor */
 @media (min-width: 1024px) {
