--- a/scss/components/_index.scss
+++ b/scss/components/_index.scss
@@ -18,7 +18,6 @@ main {
         margin-bottom: 20px;
         font-size: 1.6rem; /* Aumenta el tamaño de la fuente */
         font-weight: bold; /* Añade negrita */
-        text-shadow: 2px 2px #ccc;
         background-color: #947962;
         border: groove 1px #000;
     }
@@ -74,6 +73,7 @@ main {
 
     img {
         width: 100%;
+        height: 600px;
     }
 }
 
